--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Emile's Projects</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="/style.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" href="style.css">
+        
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+      
+      </head>
+<body>
+    <nav class="navbar navbar-custom">
+        <a class="navbar-brand" href="/index.html">Emile's Projects</a>
+    </nav>
+
+	<!-- <h1 class="navbar-custom">Emile's Projects</h1> -->
+	<div class="grid-container">
+		<div class="grid-item">
+			<img src="projects/nema17/cover.jpg" alt="Nema 17 Controller" width="300" height="300">
+			<div class="overlay">
+				<div class="text">
+					<h2>Nema 17 Controller</h2>
+					<p>Closed loop controller for NEMA17</p>
+					<button><a href="projects/nema17/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
+				</div>
+			</div>
+		</div>
+		<div class="grid-item">
+			<img src="pictures/project2.jpg" alt="Project 2" width="300" height="300">
+			<div class="overlay">
+				<div class="text">
+					<h2>Project 2</h2>
+					<p>Description of Project 2.</p>
+					<button><a href="path/to/your/other/file.html" style="text-decoration: none; color: black;">Learn More</a></button>
+				</div>
+			</div>
+		</div>
+		<div class="grid-item">
+			<img src="pictures/project3.jpg" alt="Project 3" width="300" height="300">
+			<div class="overlay">
+				<div class="text">
+					<h2>Project 3</h2>
+					<p>Description of Project 3.</p>
+                    <button><a href="path/to/your/other/file.html" style="text-decoration: none; color: black;">Learn More</a></button>
+				</div>
+			</div>
+		</div>
+	</div>
+</body>
+</html>
