template all project

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 	<!-- <h1 class="navbar-custom">Emile's Projects</h1> -->
 	<div class="grid-container">
 		<div class="grid-item">
-			<img src="projects/nema17/cover.jpg" alt="Nema 17 Controller" width="300" height="300">
+			<img src="projects/11-nema17/cover.jpg" alt="Nema 17 Controller" width="300" height="300">
 			<div class="overlay">
 				<div class="text">
 					<h2>Nema 17 Controller</h2>
 					<p>Closed loop controller for NEMA17</p>
-					<button><a href="projects/nema17/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
+					<button><a href="projects/11-nema17/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
 				</div>
 			</div>
 		</div>
