11 projects en cours

--- a/index.html
+++ b/index.html
@@ -29,26 +29,119 @@
 				</div>
 			</div>
 		</div>
-		<div class="grid-item">
-			<img src="pictures/project2.jpg" alt="Project 2" width="300" height="300">
+
+        <div class="grid-item">
+			<img src="projects/10-milling/cover.jpg" alt="MillingCover" width="300" height="300">
 			<div class="overlay">
 				<div class="text">
-					<h2>Project 2</h2>
-					<p>Description of Project 2.</p>
-					<button><a href="path/to/your/other/file.html" style="text-decoration: none; color: black;">Learn More</a></button>
+					<h2>Milling Machine</h2>
+					<p>Conventional Milling Machine for machining aluminium</p>
+					<button><a href="projects/10-milling/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
 				</div>
 			</div>
 		</div>
-		<div class="grid-item">
-			<img src="pictures/project3.jpg" alt="Project 3" width="300" height="300">
+
+        <div class="grid-item">
+			<img src="projects/9-boombox/cover.jpg" alt="boomboxCover" width="300" height="300">
 			<div class="overlay">
 				<div class="text">
-					<h2>Project 3</h2>
-					<p>Description of Project 3.</p>
-                    <button><a href="path/to/your/other/file.html" style="text-decoration: none; color: black;">Learn More</a></button>
+					<h2>Boombox</h2>
+					<p>A loud portable speaker</p>
+					<button><a href="projects/9-boombox/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
 				</div>
 			</div>
 		</div>
+
+        <div class="grid-item">
+			<img src="projects/11-nema17/cover.jpg" alt="Nema 17 Controller" width="300" height="300">
+			<div class="overlay">
+				<div class="text">
+					<h2>Nema 17 Controller</h2>
+					<p>Closed loop controller for NEMA17</p>
+					<button><a href="projects/11-nema17/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
+				</div>
+			</div>
+		</div>
+
+        <div class="grid-item">
+			<img src="projects/11-nema17/cover.jpg" alt="Nema 17 Controller" width="300" height="300">
+			<div class="overlay">
+				<div class="text">
+					<h2>Nema 17 Controller</h2>
+					<p>Closed loop controller for NEMA17</p>
+					<button><a href="projects/11-nema17/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
+				</div>
+			</div>
+		</div>
+
+        <div class="grid-item">
+			<img src="projects/11-nema17/cover.jpg" alt="Nema 17 Controller" width="300" height="300">
+			<div class="overlay">
+				<div class="text">
+					<h2>Nema 17 Controller</h2>
+					<p>Closed loop controller for NEMA17</p>
+					<button><a href="projects/11-nema17/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
+				</div>
+			</div>
+		</div>
+
+        <div class="grid-item">
+			<img src="projects/11-nema17/cover.jpg" alt="Nema 17 Controller" width="300" height="300">
+			<div class="overlay">
+				<div class="text">
+					<h2>Nema 17 Controller</h2>
+					<p>Closed loop controller for NEMA17</p>
+					<button><a href="projects/11-nema17/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
+				</div>
+			</div>
+		</div>
+
+        <div class="grid-item">
+			<img src="projects/11-nema17/cover.jpg" alt="Nema 17 Controller" width="300" height="300">
+			<div class="overlay">
+				<div class="text">
+					<h2>Nema 17 Controller</h2>
+					<p>Closed loop controller for NEMA17</p>
+					<button><a href="projects/11-nema17/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
+				</div>
+			</div>
+		</div>
+
+        <div class="grid-item">
+			<img src="projects/11-nema17/cover.jpg" alt="Nema 17 Controller" width="300" height="300">
+			<div class="overlay">
+				<div class="text">
+					<h2>Nema 17 Controller</h2>
+					<p>Closed loop controller for NEMA17</p>
+					<button><a href="projects/11-nema17/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
+				</div>
+			</div>
+		</div>
+
+        <div class="grid-item">
+			<img src="projects/11-nema17/cover.jpg" alt="Nema 17 Controller" width="300" height="300">
+			<div class="overlay">
+				<div class="text">
+					<h2>Nema 17 Controller</h2>
+					<p>Closed loop controller for NEMA17</p>
+					<button><a href="projects/11-nema17/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
+				</div>
+			</div>
+		</div>
+
+        <div class="grid-item">
+			<img src="projects/11-nema17/cover.jpg" alt="Nema 17 Controller" width="300" height="300">
+			<div class="overlay">
+				<div class="text">
+					<h2>Nema 17 Controller</h2>
+					<p>Closed loop controller for NEMA17</p>
+					<button><a href="projects/11-nema17/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
+				</div>
+			</div>
+		</div>
+
+	
+
 	</div>
 </body>
 </html>
