--- a/index.html
+++ b/index.html
@@ -53,92 +53,28 @@
 		</div>
 
         <div class="grid-item">
-			<img src="projects/11-nema17/cover.jpg" alt="Nema 17 Controller" width="300" height="300">
+			<img src="projects/8-machine2023/cover.jpg" alt="machineCover" width="300" height="300">
 			<div class="overlay">
 				<div class="text">
-					<h2>Nema 17 Controller</h2>
-					<p>Closed loop controller for NEMA17</p>
-					<button><a href="projects/11-nema17/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
+					<h2>Sherbrooke Machine</h2>
+					<p>Sherbrooke Machine for the Engineering Games 2023</p>
+					<button><a href="projects/8-machine2023/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
 				</div>
 			</div>
 		</div>
 
         <div class="grid-item">
-			<img src="projects/11-nema17/cover.jpg" alt="Nema 17 Controller" width="300" height="300">
+			<img src="projects/7-dcdc/cover.jpg" alt="dcdcCover" width="300" height="300">
 			<div class="overlay">
 				<div class="text">
-					<h2>Nema 17 Controller</h2>
-					<p>Closed loop controller for NEMA17</p>
-					<button><a href="projects/11-nema17/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
+					<h2>4A DCDC</h2>
+					<p>Really small form factor DCDC</p>
+					<button><a href="projects/7-dcdc/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
 				</div>
 			</div>
 		</div>
 
-        <div class="grid-item">
-			<img src="projects/11-nema17/cover.jpg" alt="Nema 17 Controller" width="300" height="300">
-			<div class="overlay">
-				<div class="text">
-					<h2>Nema 17 Controller</h2>
-					<p>Closed loop controller for NEMA17</p>
-					<button><a href="projects/11-nema17/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
-				</div>
-			</div>
-		</div>
-
-        <div class="grid-item">
-			<img src="projects/11-nema17/cover.jpg" alt="Nema 17 Controller" width="300" height="300">
-			<div class="overlay">
-				<div class="text">
-					<h2>Nema 17 Controller</h2>
-					<p>Closed loop controller for NEMA17</p>
-					<button><a href="projects/11-nema17/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
-				</div>
-			</div>
-		</div>
-
-        <div class="grid-item">
-			<img src="projects/11-nema17/cover.jpg" alt="Nema 17 Controller" width="300" height="300">
-			<div class="overlay">
-				<div class="text">
-					<h2>Nema 17 Controller</h2>
-					<p>Closed loop controller for NEMA17</p>
-					<button><a href="projects/11-nema17/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
-				</div>
-			</div>
-		</div>
-
-        <div class="grid-item">
-			<img src="projects/11-nema17/cover.jpg" alt="Nema 17 Controller" width="300" height="300">
-			<div class="overlay">
-				<div class="text">
-					<h2>Nema 17 Controller</h2>
-					<p>Closed loop controller for NEMA17</p>
-					<button><a href="projects/11-nema17/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
-				</div>
-			</div>
-		</div>
-
-        <div class="grid-item">
-			<img src="projects/11-nema17/cover.jpg" alt="Nema 17 Controller" width="300" height="300">
-			<div class="overlay">
-				<div class="text">
-					<h2>Nema 17 Controller</h2>
-					<p>Closed loop controller for NEMA17</p>
-					<button><a href="projects/11-nema17/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
-				</div>
-			</div>
-		</div>
-
-        <div class="grid-item">
-			<img src="projects/11-nema17/cover.jpg" alt="Nema 17 Controller" width="300" height="300">
-			<div class="overlay">
-				<div class="text">
-					<h2>Nema 17 Controller</h2>
-					<p>Closed loop controller for NEMA17</p>
-					<button><a href="projects/11-nema17/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
-				</div>
-			</div>
-		</div>
+    
 
 	
 
