--- a/projects/10-milling/page.html
+++ b/projects/10-milling/page.html
@@ -19,14 +19,35 @@
     </nav>
 
 <div class="container mt-5">
-  <h1 class="text-center mb-5">NEMA17 Close loop Controller</h1>
-  
+  <h1 class="text-center mb-5">Milling Machine</h1>
+
+  <div class="row justify-content-center">
+    <div class="col-md-4">
+      <img src="cover.jpg" alt="CoverNema" width="300" height="300">
+      <p class="text-center"><small>CAD Milling</small></p>
+    </div>
+    <div class="col-md-8">
+      <h2>Project Description</h2>
+      <p>3D printing is nice, but something, metal is required. A milling machine that is small enough to fit in your appartement, why not ;)
+        This is a tought project because it is a 100% mechanical project. No electronics, no programming, just mechanics and require a lot of precision.
+      </p>
+      <p>I already made a small CNC in the past but this time, I prefer to make a conventional milling machine to be able to operate it faster without the trouble of programming a path for the CNC</p>
+    </div>
+  </div>
+  <H2>Current Status</H2>
+  <p>The frame is all weld together. Linear rail for the X axis are mounted onto the frame.</p>
+  <div class="col-md-4">
+    <img src="cnc_real.jpg" alt="CoverNema" width="500" height="600">
+  </div>
+
+
+  <div style="background-color: white; height: 100px;"></div>
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/index.html" style="text-decoration: none; color: black;">Previous</a></button>
+      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/11-nema17/page.html" style="text-decoration: none; color: black;">Previous</a></button>
     </div>
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/projects2.html" style="text-decoration: none; color: black;">Next</a></button>
+      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/9-boombox/page.html" style="text-decoration: none; color: black;">Next</a></button>
     </div>
   </div>
   
