--- a/projects/11-nema17/page.html
+++ b/projects/11-nema17/page.html
@@ -20,13 +20,42 @@
 
 <div class="container mt-5">
   <h1 class="text-center mb-5">NEMA17 Close loop Controller</h1>
-  
+
+  <div class="row justify-content-center">
+    <div class="col-md-4">
+      <img src="cover.jpg" alt="CoverNema" width="300" height="300">
+      <p class="text-center"><small>PCB 3D top view</small></p>
+    </div>
+    <div class="col-md-8">
+      <h2>Project Description</h2>
+      <p>It is a "simple" stepper motor driver that you can screw on a NEMA17.</p>
+      <p>There main features are: </p>
+        <ul>
+          <li>Swapable A4899 style Stepper Driver. (if you burn one, you can change it!)</li>
+          <li>Current sensor to not overdrive the motor </li>
+          <li>Magnetic encoder for close loop feedback</li>
+          <li>ESP32-C3 for connectivity (Wifi,Bt,USB,UART)</li>
+          <li>Over and reverse voltage protection onboard</li>
+        </ul>
+
+        <p>All the electrical files are final for the V1 <a href="https://github.com/emilerenaud/Nema17_controller/tree/main/Electronic">here</a></p>
+        <p>The software is under developpement</p>
+    </div>
+  </div>
+  <H2>Futur Upgrade</H2>
+  <p>There is a lot of room for improvement on this board. Here is a list of what I'll add:</p>
+  <ul>
+    <li>USB-C connector with PD</li>
+    <li>Pinout for UART for smarter stepper driver like TMC</li>
+  </ul>
+
+  <div style="background-color: white; height: 100px;"></div>
   <div class="row justify-content-center">
     <div class="col-md-6">
       <button type="button" class="btn btn-secondary btn-block"><a href="/index.html" style="text-decoration: none; color: black;">Previous</a></button>
     </div>
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/projects2.html" style="text-decoration: none; color: black;">Next</a></button>
+      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/10-milling/page.html" style="text-decoration: none; color: black;">Next</a></button>
     </div>
   </div>
   
