--- a/projects/9-boombox/page.html
+++ b/projects/9-boombox/page.html
@@ -19,14 +19,38 @@
     </nav>
 
 <div class="container mt-5">
-  <h1 class="text-center mb-5">NEMA17 Close loop Controller</h1>
-  
+  <h1 class="text-center mb-5">Boombox</h1>
+
+  <div class="row justify-content-center">
+    <div class="col-md-4">
+      <img src="cover.jpg" alt="CoverBoombox" width="300" height="200">
+      <p class="text-center"><small>CAD Boombox</small></p>
+    </div>
+    <div class="col-md-8">
+      <h2>Project Description</h2>
+      <p>This is a project I made because none of my friend have a speaker loud enough to play good outside and that can entertain a small party. Based on old home theater speakers, I
+        made a portable boombox that can be used with a battery. It can play for 8-20h depending of the volume.</p> 
+      <p>The box can easily be laser cut and glued together. The back section is made of 3 sections; that's allow the two side sections to be correctly seal from behind</p>
+    </div>
+  </div>
+  <H2>Futur Upgrade</H2>
+  <ul>
+    <li>USB-C to recharge the battery</li>
+    <li>Replace the 25W amps by two 30W amps</li>
+    <li>Add more battery</li>
+  </ul>
+  <div class="col-md-4">
+    <img src="cover.jpg" alt="CoverNema" width="500" height="400">
+  </div>
+
+
+  <div style="background-color: white; height: 100px;"></div>
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/index.html" style="text-decoration: none; color: black;">Previous</a></button>
+      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/10-milling/page.html" style="text-decoration: none; color: black;">Previous</a></button>
     </div>
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/projects2.html" style="text-decoration: none; color: black;">Next</a></button>
+      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/8-machine2023/page.html" style="text-decoration: none; color: black;">Next</a></button>
     </div>
   </div>
   
