--- a/projects/7-dcdc/page.html
+++ b/projects/7-dcdc/page.html
@@ -23,10 +23,10 @@
   
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/index.html" style="text-decoration: none; color: black;">Previous</a></button>
+      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/8-machine2023/page.html" style="text-decoration: none; color: black;">Previous</a></button>
     </div>
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/projects2.html" style="text-decoration: none; color: black;">Next</a></button>
+      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/6-beerpump/page.html" style="text-decoration: none; color: black;">Next</a></button>
     </div>
   </div>
   
