carousel + update text

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 	<!-- <h1 class="navbar-custom">Emile's Projects</h1> -->
 	<div class="grid-container">
-		<div class="grid-item">
+		<div class="grid-item text-center">
 			<img src="projects/11-nema17/cover.jpg" alt="Nema 17 Controller" width="300" height="300">
 			<div class="overlay">
 				<div class="text">
@@ -68,7 +68,7 @@
 			<div class="overlay">
 				<div class="text">
 					<h2>4A DCDC</h2>
-					<p>Really small form factor DCDC</p>
+					<p>Small form factor DCDC</p>
 					<button><a href="projects/7-dcdc/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
 				</div>
 			</div>
