--- a/projects/11-nema17/page.html
+++ b/projects/11-nema17/page.html
@@ -29,7 +29,7 @@
     <div class="col-md-8">
       <h2>Project Description</h2>
       <p>It is a "simple" stepper motor driver that you can screw on a NEMA17.</p>
-      <p>There main features are: </p>
+      <p>Its main features: </p>
         <ul>
           <li>Swapable A4899 style Stepper Driver. (if you burn one, you can change it!)</li>
           <li>Current sensor to not overdrive the motor </li>
@@ -39,15 +39,32 @@
         </ul>
 
         <p>All the electrical files are final for the V1 <a href="https://github.com/emilerenaud/Nema17_controller/tree/main/Electronic">here</a></p>
-        <p>The software is under developpement</p>
+        <p>The software is currently under developpement</p>
     </div>
   </div>
+
   <H2>Futur Upgrade</H2>
-  <p>There is a lot of room for improvement on this board. Here is a list of what I'll add:</p>
   <ul>
     <li>USB-C connector with PD</li>
     <li>Pinout for UART for smarter stepper driver like TMC</li>
   </ul>
+
+  <div style="background-color: white; height: 50px;"></div>
+  <!-- gallerie section with 3 pictures side by side -->
+  <H2>Galerie</H2>
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="8000">
+    <ol class="carousel-indicators"></ol>
+    <div class="carousel-inner"></div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  <script src="/carousel.js"></script>
 
   <div style="background-color: white; height: 100px;"></div>
   <div class="row justify-content-center">
