--- a/projects/9-boombox/page.html
+++ b/projects/9-boombox/page.html
@@ -22,26 +22,41 @@
   <h1 class="text-center mb-5">Boombox</h1>
 
   <div class="row justify-content-center">
-    <div class="col-md-4">
-      <img src="cover.jpg" alt="CoverBoombox" width="300" height="200">
+    <div class="col-md-5">
+      <img src="cover.jpg" alt="CoverBoombox" width="400" height="250">
       <p class="text-center"><small>CAD Boombox</small></p>
     </div>
-    <div class="col-md-8">
+    <div class="col-md-7">
       <h2>Project Description</h2>
-      <p>This is a project I made because none of my friend have a speaker loud enough to play good outside and that can entertain a small party. Based on old home theater speakers, I
-        made a portable boombox that can be used with a battery. It can play for 8-20h depending of the volume.</p> 
-      <p>The box can easily be laser cut and glued together. The back section is made of 3 sections; that's allow the two side sections to be correctly seal from behind</p>
+      <p>This is a project I made because none of my friends have a speaker loud enough to play well outside and that can entertain a small party. Based on old home theater speakers, I
+        made a portable boombox that can be used on battery power. It can play for 8-20 hours depending of the volume.</p> 
+      <p>The box can easily be laser cut and glued together. The back section is made of 3 sections; that allows the two side sections to be correctly seal from behind</p>
     </div>
   </div>
   <H2>Futur Upgrade</H2>
   <ul>
     <li>USB-C to recharge the battery</li>
-    <li>Replace the 25W amps by two 30W amps</li>
-    <li>Add more battery</li>
+    <li>Replace the 25W amps by two 30W amplifiers</li>
+    <li>Add more batteries</li>
   </ul>
-  <div class="col-md-4">
-    <img src="cover.jpg" alt="CoverNema" width="500" height="400">
+
+
+  <div style="background-color: white; height: 50px;"></div>
+
+  <H2>Galerie</H2>
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="8000">
+    <ol class="carousel-indicators"></ol>
+    <div class="carousel-inner"></div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
+  <script src="/carousel.js"></script>
 
 
   <div style="background-color: white; height: 100px;"></div>
