--- a/projects/10-milling/page.html
+++ b/projects/10-milling/page.html
@@ -23,22 +23,36 @@
 
   <div class="row justify-content-center">
     <div class="col-md-4">
-      <img src="cover.jpg" alt="CoverNema" width="300" height="300">
+      <img src="cover.jpg" alt="coverCNC" width="300" height="300">
       <p class="text-center"><small>CAD Milling</small></p>
     </div>
     <div class="col-md-8">
       <h2>Project Description</h2>
-      <p>3D printing is nice, but something, metal is required. A milling machine that is small enough to fit in your appartement, why not ;)
-        This is a tought project because it is a 100% mechanical project. No electronics, no programming, just mechanics and require a lot of precision.
+      <p>While 3D printing is great, sometimes metal parts are necessary, which is why I want to build a milling machine that is small enough to fit in my apartment.
+        This is a tough project because it is a 100% mechanical project. No electronics, no programming, just mechanics and a lot of precision.
       </p>
       <p>I already made a small CNC in the past but this time, I prefer to make a conventional milling machine to be able to operate it faster without the trouble of programming a path for the CNC</p>
     </div>
   </div>
   <H2>Current Status</H2>
-  <p>The frame is all weld together. Linear rail for the X axis are mounted onto the frame.</p>
-  <div class="col-md-4">
-    <img src="cnc_real.jpg" alt="CoverNema" width="500" height="600">
+  <p>The frame is all welded together. Linear rail for the X axis are mounted onto the frame.</p>
+
+  <div style="background-color: white; height: 50px;"></div>
+
+  <H2>Galerie</H2>
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="8000">
+    <ol class="carousel-indicators"></ol>
+    <div class="carousel-inner"></div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
+  <script src="/carousel.js"></script>
 
 
   <div style="background-color: white; height: 100px;"></div>
