--- a/projects/7-dcdc/page.html
+++ b/projects/7-dcdc/page.html
@@ -20,7 +20,83 @@
 
 <div class="container mt-5">
   <h1 class="text-center mb-5">NEMA17 Close loop Controller</h1>
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Project XY</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="/style.css">
+  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  
+
+</head>
+<body>
+
+    <nav class="navbar navbar-custom">
+        <a class="navbar-brand" href="/index.html">Emile's Projects</a>
+    </nav>
+
+<div class="container mt-5">
+  <h1 class="text-center mb-5">Sherbrooke Machine for Engineering Games 2023</h1>
+
+  <div class="row justify-content-center">
+    <div class="col-md-4">
+      <img src="cover.jpg" alt="CoverNema" width="300" height="300">
+      <p class="text-center"><small>Overview Machine</small></p>
+    </div>
+    <div class="col-md-8">
+      <h2>Project Description</h2>
+      <p>
+        description here
+      </p>
+    </div>
+  </div>
+  <H2>History</H2>
+  <p>cheap module, V1. V2</p>
+    <div class="row">
+      <div class="col-md-6">
+        <img src="history.jpg" alt="PCB3D" width="400" height="300">
+        <p class="text-center"><small></small></p>
+      </div>
+    </div>
+
+    <div style="background-color: white; height: 50px;"></div>
+
+    <H2>Galerie</H2>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="8000">
+      <ol class="carousel-indicators"></ol>
+      <div class="carousel-inner"></div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+    <script src="/carousel.js"></script>
+
+  <div style="background-color: white; height: 100px;"></div>
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/9-boombox/page.html" style="text-decoration: none; color: black;">Previous</a></button>
+    </div>
+    <div class="col-md-6">
+      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/7-dcdc/page.html" style="text-decoration: none; color: black;">Next</a></button>
+    </div>
+  </div>
+  
+</div>
+
+</body>
+</html>
   <div class="row justify-content-center">
     <div class="col-md-6">
       <button type="button" class="btn btn-secondary btn-block"><a href="/projects/8-machine2023/page.html" style="text-decoration: none; color: black;">Previous</a></button>
