--- a/projects/11-nema17/page.html
+++ b/projects/11-nema17/page.html
@@ -51,7 +51,7 @@
 
   <div style="background-color: white; height: 50px;"></div>
   <!-- gallerie section with 3 pictures side by side -->
-  <H2>Galerie</H2>
+  <!-- <H2>Galerie</H2>
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="8000">
     <ol class="carousel-indicators"></ol>
     <div class="carousel-inner"></div>
@@ -64,7 +64,36 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-  <script src="/carousel.js"></script>
+  <script src="/carousel.js"></script> -->
+
+  <H2>Galerie</H2>
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="8000">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="cover.jpg" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="withStepper.jpg" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="back.jpg" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="schematic.jpg" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="pcb_bot.jpg"  alt="...">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 
   <div style="background-color: white; height: 100px;"></div>
   <div class="row justify-content-center">
