--- a/projects/7-dcdc/page.html
+++ b/projects/7-dcdc/page.html
@@ -43,7 +43,7 @@
     </nav>
 
 <div class="container mt-5">
-  <h1 class="text-center mb-5">Sherbrooke Machine for Engineering Games 2023</h1>
+  <h1 class="text-center mb-5">4A DC-DC</h1>
 
   <div class="row justify-content-center">
     <div class="col-md-4">
@@ -69,40 +69,45 @@
     <div style="background-color: white; height: 50px;"></div>
 
     <H2>Galerie</H2>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="8000">
-      <ol class="carousel-indicators"></ol>
-      <div class="carousel-inner"></div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="8000">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="cover.jpg" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="history.jpg" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="pcb_back.jpg" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="pcb_front.jpg" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="schematic.jpg"  alt="...">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
     </div>
-    <script src="/carousel.js"></script>
+  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
+  
 
   <div style="background-color: white; height: 100px;"></div>
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/9-boombox/page.html" style="text-decoration: none; color: black;">Previous</a></button>
-    </div>
-    <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/7-dcdc/page.html" style="text-decoration: none; color: black;">Next</a></button>
-    </div>
-  </div>
-  
-</div>
-
-</body>
-</html>
   <div class="row justify-content-center">
     <div class="col-md-6">
       <button type="button" class="btn btn-secondary btn-block"><a href="/projects/8-machine2023/page.html" style="text-decoration: none; color: black;">Previous</a></button>
     </div>
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/6-beerpump/page.html" style="text-decoration: none; color: black;">Next</a></button>
+      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/7-dcdc/page.html" style="text-decoration: none; color: black;">Next</a></button>
     </div>
   </div>
   
