--- a/projects/8-machine2023/page.html
+++ b/projects/8-machine2023/page.html
@@ -54,19 +54,36 @@
     <div style="background-color: white; height: 50px;"></div>
 
     <H2>Galerie</H2>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="8000">
-      <ol class="carousel-indicators"></ol>
-      <div class="carousel-inner"></div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="8000">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="cover.jpg" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="2machines.jpg" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="pcb.jpg" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="team.jpg" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="pcbreal.jpg"  alt="...">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
     </div>
-    <script src="/carousel.js"></script>
+  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
 
   <div style="background-color: white; height: 100px;"></div>
   <div class="row justify-content-center">
