--- a/projects/9-boombox/page.html
+++ b/projects/9-boombox/page.html
@@ -43,7 +43,7 @@
 
   <div style="background-color: white; height: 50px;"></div>
 
-  <H2>Galerie</H2>
+  <!-- <H2>Galerie</H2>
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="8000">
     <ol class="carousel-indicators"></ol>
     <div class="carousel-inner"></div>
@@ -56,7 +56,36 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-  <script src="/carousel.js"></script>
+  <script src="/carousel.js"></script> -->
+
+  <H2>Galerie</H2>
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="8000">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="cover.jpg" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="CAD.jpg" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="IMG_0759.jpg" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="pcb_front.jpg" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="schematic.jpg"  alt="...">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
 
 
   <div style="background-color: white; height: 100px;"></div>
