correction + add picture boombox

--- a/index.html
+++ b/index.html
@@ -74,9 +74,16 @@
 			</div>
 		</div>
 
-    
-
-	
+        <div class="grid-item">
+			<img src="" alt="ComingSoon" width="300" height="300">
+			<div class="overlay">
+				<div class="text">
+					<h2>Coming soon</h2>
+					<p>N/A</p>
+					<button><a href="projects/7-dcdc/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
+				</div>
+			</div>
+		</div>
 
 	</div>
 </body>
