--- a/projects/10-milling/page.html
+++ b/projects/10-milling/page.html
@@ -55,7 +55,7 @@
   <script src="/carousel.js"></script> -->
 
   <H2>Galerie</H2>
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="8000">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="5000">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="cover.jpg" alt="...">
@@ -84,10 +84,10 @@
   <div style="background-color: white; height: 100px;"></div>
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/11-nema17/page.html" style="text-decoration: none; color: black;">Previous</a></button>
+      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/11-nema17/page.html" style="text-decoration: none; color: black;">Previous Project</a></button>
     </div>
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/9-boombox/page.html" style="text-decoration: none; color: black;">Next</a></button>
+      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/9-boombox/page.html" style="text-decoration: none; color: black;">Next Project</a></button>
     </div>
   </div>
   
