--- a/projects/11-nema17/page.html
+++ b/projects/11-nema17/page.html
@@ -28,7 +28,7 @@
     </div>
     <div class="col-md-8">
       <h2>Project Description</h2>
-      <p>It is a "simple" stepper motor driver that you can screw on a NEMA17.</p>
+      <p>It is a "simple" stepper motor driver that you can screw onto a NEMA17.</p>
       <p>Its main features: </p>
         <ul>
           <li>Swapable A4899 style Stepper Driver. (if you burn one, you can change it!)</li>
@@ -39,11 +39,11 @@
         </ul>
 
         <p>All the electrical files are final for the V1 <a href="https://github.com/emilerenaud/Nema17_controller/tree/main/Electronic">here</a></p>
-        <p>The software is currently under developpement</p>
+        <p>The software is currently under development</p>
     </div>
   </div>
 
-  <H2>Futur Upgrade</H2>
+  <H2>Future Upgrade</H2>
   <ul>
     <li>USB-C connector with PD</li>
     <li>Pinout for UART for smarter stepper driver like TMC</li>
@@ -67,7 +67,7 @@
   <script src="/carousel.js"></script> -->
 
   <H2>Galerie</H2>
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="8000">
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="5000">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="cover.jpg" alt="...">
@@ -98,10 +98,10 @@
   <div style="background-color: white; height: 100px;"></div>
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/index.html" style="text-decoration: none; color: black;">Previous</a></button>
+      <button type="button" class="btn btn-secondary btn-block"><a href="/index.html" style="text-decoration: none; color: black;">Previous Project</a></button>
     </div>
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/10-milling/page.html" style="text-decoration: none; color: black;">Next</a></button>
+      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/10-milling/page.html" style="text-decoration: none; color: black;">Next Project</a></button>
     </div>
   </div>
   
