--- a/projects/9-boombox/page.html
+++ b/projects/9-boombox/page.html
@@ -59,7 +59,7 @@
   <script src="/carousel.js"></script> -->
 
   <H2>Galerie</H2>
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="8000">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="5000">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="cover.jpg" alt="...">
@@ -68,13 +68,16 @@
           <img src="CAD.jpg" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="IMG_0759.jpg" alt="...">
+          <img src="histo_1.JPG" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="pcb_front.jpg" alt="...">
+          <img src="histo_2.JPG"  alt="...">
         </div>
         <div class="carousel-item">
-          <img src="schematic.jpg"  alt="...">
+          <img src="histo_3.JPG"  alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="histo_4.jpg"  alt="...">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -91,10 +94,10 @@
   <div style="background-color: white; height: 100px;"></div>
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/10-milling/page.html" style="text-decoration: none; color: black;">Previous</a></button>
+      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/10-milling/page.html" style="text-decoration: none; color: black;">Previous Project</a></button>
     </div>
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/8-machine2023/page.html" style="text-decoration: none; color: black;">Next</a></button>
+      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/8-machine2023/page.html" style="text-decoration: none; color: black;">Next Project</a></button>
     </div>
   </div>
   
