--- a/projects/7-dcdc/page.html
+++ b/projects/7-dcdc/page.html
@@ -69,7 +69,7 @@
     <div style="background-color: white; height: 50px;"></div>
 
     <H2>Galerie</H2>
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="8000">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="5000">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="cover.jpg" alt="...">
@@ -104,10 +104,10 @@
   <div style="background-color: white; height: 100px;"></div>
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/8-machine2023/page.html" style="text-decoration: none; color: black;">Previous</a></button>
+      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/8-machine2023/page.html" style="text-decoration: none; color: black;">Previous Project</a></button>
     </div>
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/7-dcdc/page.html" style="text-decoration: none; color: black;">Next</a></button>
+      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/7-dcdc/page.html" style="text-decoration: none; color: black;">Next Project</a></button>
     </div>
   </div>
   
