add picture machine

--- a/projects/8-machine2023/page.html
+++ b/projects/8-machine2023/page.html
@@ -71,6 +71,9 @@
         <div class="carousel-item">
           <img src="pcbreal.jpg"  alt="...">
         </div>
+        <div class="carousel-item">
+          <img src="last_gen.JPG"  alt="...">
+        </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
