add beerpump + add picture

--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@
 		</div>
 
         <div class="grid-item">
+			<img src="projects/6-beerpump/cover.jpg" alt="MotorControl" width="300" height="300">
+			<div class="overlay">
+				<div class="text">
+					<h2>Motor Controller</h2>
+					<p>AtTiny85 based motor controller</p>
+					<button><a href="projects/6-beerpump/page.html" style="text-decoration: none; color: black;">Learn More</a></button>
+				</div>
+			</div>
+		</div>
+
+        <div class="grid-item">
 			<img src="" alt="ComingSoon" width="300" height="300">
 			<div class="overlay">
 				<div class="text">
