--- a/projects/10-milling/page.html
+++ b/projects/10-milling/page.html
@@ -64,11 +64,11 @@
           <img src="cnc_real.jpg" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="pcb_back.jpg" alt="...">
+          <img src="x-rail.jpg" alt="...">
         </div>
-        <div class="carousel-item">
+        <!-- <div class="carousel-item">
           <img src="pcb_front.jpg" alt="...">
-        </div>
+        </div> -->
       </div>
       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
