--- a/projects/11-nema17/page.html
+++ b/projects/11-nema17/page.html
@@ -50,40 +50,12 @@
   </ul>
 
   <div style="background-color: white; height: 50px;"></div>
-  <!-- gallerie section with 3 pictures side by side -->
-  <!-- <H2>Galerie</H2>
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="8000">
-    <ol class="carousel-indicators"></ol>
-    <div class="carousel-inner"></div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-  <script src="/carousel.js"></script> -->
 
+  <!-- Carousel Section -->
   <H2>Galerie</H2>
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="5000">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="cover.jpg" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="withStepper.jpg" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="back.jpg" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="schematic.jpg" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="pcb_bot.jpg"  alt="...">
-      </div>
+    <div class="carousel-inner" id="carousel-items">
+      <!-- Carousel items will be dynamically loaded here -->
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -106,6 +78,27 @@
   </div>
   
 </div>
+
+<script>
+// Load image list from JSON file and populate carousel
+fetch('pictures.json')
+  .then(response => response.json())
+  .then(data => {
+    const carouselInner = document.getElementById('carousel-items');
+    const images = data.images;
+
+    images.forEach((image, index) => {
+      const activeClass = index === 0 ? 'active' : '';  // First image should be active
+      const carouselItem = `
+        <div class="carousel-item ${activeClass}">
+          <img src="${image}" class="d-block w-100" alt="Project image">
+        </div>
+      `;
+      carouselInner.innerHTML += carouselItem;
+    });
+  })
+  .catch(error => console.error('Error loading images:', error));
+</script>
 
 </body>
 </html>
