--- a/projects/10-milling/page.html
+++ b/projects/10-milling/page.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="/style.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" href="style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -19,79 +19,100 @@
     </nav>
 
 <div class="container mt-5">
-  <h1 class="text-center mb-5">Milling Machine</h1>
+  <h1 class="text-center mb-5" id="project-name">Project Name</h1>
 
   <div class="row justify-content-center">
     <div class="col-md-4">
-      <img src="cover.jpg" alt="coverCNC" width="300" height="300">
-      <p class="text-center"><small>CAD Milling</small></p>
+      <img src="cover.jpg" alt="CoverNema" width="300" height="300">
+      <p class="text-center"><small>Cover Picture</small></p>
     </div>
     <div class="col-md-8">
       <h2>Project Description</h2>
+      <p id="project-description">Project description</p>
+
       <p>While 3D printing is great, sometimes metal parts are necessary, which is why I want to build a milling machine that is small enough to fit in my apartment.
         This is a tough project because it is a 100% mechanical project. No electronics, no programming, just mechanics and a lot of precision.
       </p>
       <p>I already made a small CNC in the past but this time, I prefer to make a conventional milling machine to be able to operate it faster without the trouble of programming a path for the CNC</p>
+      </div>
+      </div>
+      <H2>Current Status</H2>
+      <p>The frame is all welded together. Linear rail for the X axis are mounted onto the frame.</p>
+      
     </div>
   </div>
-  <H2>Current Status</H2>
-  <p>The frame is all welded together. Linear rail for the X axis are mounted onto the frame.</p>
 
   <div style="background-color: white; height: 50px;"></div>
 
-  <!-- <H2>Galerie</H2>
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="8000">
-    <ol class="carousel-indicators"></ol>
-    <div class="carousel-inner"></div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+  <!-- Carousel Section -->
+  <h2>Galerie</h2>
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="5000">
+    <div class="carousel-inner" id="carousel-items">
+      <!-- Carousel items will be dynamically loaded here -->
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
   </div>
-  <script src="/carousel.js"></script> -->
-
-  <H2>Galerie</H2>
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="5000">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="cover.jpg" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="cnc_real.jpg" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="x-rail.jpg" alt="...">
-        </div>
-        <!-- <div class="carousel-item">
-          <img src="pcb_front.jpg" alt="...">
-        </div> -->
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-
 
   <div style="background-color: white; height: 100px;"></div>
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/11-nema17/page.html" style="text-decoration: none; color: black;">Previous Project</a></button>
+      <button type="button" class="btn btn-secondary btn-block" id="prev-button">
+        <a href="#" style="text-decoration: none; color: black;">Previous Project</a>
+      </button>
     </div>
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/9-boombox/page.html" style="text-decoration: none; color: black;">Next Project</a></button>
+      <button type="button" class="btn btn-secondary btn-block" id="next-button">
+        <a href="#" style="text-decoration: none; color: black;">Next Project</a>
+      </button>
     </div>
   </div>
   
 </div>
+
+<script>
+// Load project info from JSON file
+fetch('info.json')
+  .then(response => response.json())
+  .then(data => {
+    // Check if data is an array and access the first item
+    const projectInfo = Array.isArray(data) ? data[0] : data;
+    console.log(projectInfo);
+    // Update project name and description
+    document.getElementById('project-name').innerText = projectInfo.name;
+    console.log(data.name);
+    document.getElementById('project-description').innerText = projectInfo.description;
+
+    // Update navigation buttons with links from info.json
+    document.getElementById('prev-button').querySelector('a').href = projectInfo.prev;
+    document.getElementById('next-button').querySelector('a').href = projectInfo.next;
+
+    // Load image list from pictures.json for the carousel
+    return fetch('pictures.json');
+  })
+  .then(response => response.json())
+  .then(data => {
+    const carouselInner = document.getElementById('carousel-items');
+    const images = data.images;
+
+    images.forEach((image, index) => {
+      const activeClass = index === 0 ? 'active' : '';  // First image should be active
+      const carouselItem = `
+        <div class="carousel-item ${activeClass}">
+          <img src="${image}" class="d-block w-100" alt="Project image">
+        </div>
+      `;
+      carouselInner.innerHTML += carouselItem;
+    });
+  })
+  .catch(error => console.error('Error loading data:', error));
+</script>
 
 </body>
 </html>
