--- a/projects/7-dcdc/page.html
+++ b/projects/7-dcdc/page.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="/style.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" href="style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -19,36 +19,16 @@
     </nav>
 
 <div class="container mt-5">
-  <h1 class="text-center mb-5">NEMA17 Close loop Controller</h1>
-  <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Project XY</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" href="style.css">
-  <link rel="stylesheet" type="text/css" href="/style.css">
-  
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  
-
-</head>
-<body>
-
-    <nav class="navbar navbar-custom">
-        <a class="navbar-brand" href="/index.html">Emile's Projects</a>
-    </nav>
-
-<div class="container mt-5">
-  <h1 class="text-center mb-5">4A DC-DC</h1>
+  <h1 class="text-center mb-5" id="project-name">Project Name</h1>
 
   <div class="row justify-content-center">
     <div class="col-md-4">
       <img src="cover.jpg" alt="CoverNema" width="300" height="300">
-      <p class="text-center"><small>Overview Machine</small></p>
+      <p class="text-center"><small>Cover Picture</small></p>
+    </div>
+    <div class="col-md-8">
+      <h2>Project Description</h2>
+      <p id="project-description">Project description</p>
     </div>
     <div class="col-md-8">
       <h2>Project Description</h2>
@@ -74,53 +54,79 @@
         <p class="text-center"><small></small></p>
       </div>
     </div>
+  </div>
 
-    <div style="background-color: white; height: 50px;"></div>
+  <div style="background-color: white; height: 50px;"></div>
 
-    <H2>Galerie</H2>
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="5000">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="cover.jpg" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="history.jpg" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="pcb_back.jpg" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="pcb_front.jpg" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="schematic.jpg"  alt="...">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+  <!-- Carousel Section -->
+  <h2>Galerie</h2>
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="5000">
+    <div class="carousel-inner" id="carousel-items">
+      <!-- Carousel items will be dynamically loaded here -->
     </div>
-  
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
-  
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 
   <div style="background-color: white; height: 100px;"></div>
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/8-machine2023/page.html" style="text-decoration: none; color: black;">Previous Project</a></button>
+      <button type="button" class="btn btn-secondary btn-block" id="prev-button">
+        <a href="#" style="text-decoration: none; color: black;">Previous Project</a>
+      </button>
     </div>
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/7-dcdc/page.html" style="text-decoration: none; color: black;">Next Project</a></button>
+      <button type="button" class="btn btn-secondary btn-block" id="next-button">
+        <a href="#" style="text-decoration: none; color: black;">Next Project</a>
+      </button>
     </div>
   </div>
   
 </div>
+
+<script>
+// Load project info from JSON file
+fetch('info.json')
+  .then(response => response.json())
+  .then(data => {
+    // Check if data is an array and access the first item
+    const projectInfo = Array.isArray(data) ? data[0] : data;
+    console.log(projectInfo);
+    // Update project name and description
+    document.getElementById('project-name').innerText = projectInfo.name;
+    console.log(data.name);
+    document.getElementById('project-description').innerText = projectInfo.description;
+
+    // Update navigation buttons with links from info.json
+    document.getElementById('prev-button').querySelector('a').href = projectInfo.prev;
+    document.getElementById('next-button').querySelector('a').href = projectInfo.next;
+
+    // Load image list from pictures.json for the carousel
+    return fetch('pictures.json');
+  })
+  .then(response => response.json())
+  .then(data => {
+    const carouselInner = document.getElementById('carousel-items');
+    const images = data.images;
+
+    images.forEach((image, index) => {
+      const activeClass = index === 0 ? 'active' : '';  // First image should be active
+      const carouselItem = `
+        <div class="carousel-item ${activeClass}">
+          <img src="${image}" class="d-block w-100" alt="Project image">
+        </div>
+      `;
+      carouselInner.innerHTML += carouselItem;
+    });
+  })
+  .catch(error => console.error('Error loading data:', error));
+</script>
 
 </body>
 </html>
