--- a/projects/9-boombox/page.html
+++ b/projects/9-boombox/page.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="/style.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" href="style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -19,89 +19,102 @@
     </nav>
 
 <div class="container mt-5">
-  <h1 class="text-center mb-5">Boombox</h1>
+  <h1 class="text-center mb-5" id="project-name">Project Name</h1>
 
   <div class="row justify-content-center">
-    <div class="col-md-5">
-      <img src="cover.jpg" alt="CoverBoombox" width="400" height="250">
-      <p class="text-center"><small>CAD Boombox</small></p>
+    <div class="col-md-4">
+      <img src="cover.jpg" alt="CoverNema" width="300" height="300">
+      <p class="text-center"><small>Cover Picture</small></p>
     </div>
-    <div class="col-md-7">
+    <div class="col-md-8">
+      <h2>Project Description</h2>
+      <p id="project-description">Project description</p>
+  
       <h2>Project Description</h2>
       <p>This is a project I made because none of my friends have a speaker loud enough to play well outside and that can entertain a small party. Based on old home theater speakers, I
         made a portable boombox that can be used on battery power. It can play for 8-20 hours depending of the volume.</p> 
       <p>The box can easily be laser cut and glued together. The back section is made of 3 sections; that allows the two side sections to be correctly seal from behind</p>
     </div>
-  </div>
-  <H2>Futur Upgrade</H2>
-  <ul>
+    </div>
+    <H2>Futur Upgrade</H2>
+    <ul>
     <li>USB-C to recharge the battery</li>
     <li>Replace the 25W amps by two 30W amplifiers</li>
     <li>Add more batteries</li>
-  </ul>
-
+    </ul>
+  </div>
 
   <div style="background-color: white; height: 50px;"></div>
 
-  <!-- <H2>Galerie</H2>
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="8000">
-    <ol class="carousel-indicators"></ol>
-    <div class="carousel-inner"></div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+  <!-- Carousel Section -->
+  <h2>Galerie</h2>
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="5000">
+    <div class="carousel-inner" id="carousel-items">
+      <!-- Carousel items will be dynamically loaded here -->
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
   </div>
-  <script src="/carousel.js"></script> -->
-
-  <H2>Galerie</H2>
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="5000">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="cover.jpg" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="CAD.jpg" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="histo_1.JPG" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="histo_2.JPG"  alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="histo_3.JPG"  alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="histo_4.jpg"  alt="...">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-
 
   <div style="background-color: white; height: 100px;"></div>
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/10-milling/page.html" style="text-decoration: none; color: black;">Previous Project</a></button>
+      <button type="button" class="btn btn-secondary btn-block" id="prev-button">
+        <a href="#" style="text-decoration: none; color: black;">Previous Project</a>
+      </button>
     </div>
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block"><a href="/projects/8-machine2023/page.html" style="text-decoration: none; color: black;">Next Project</a></button>
+      <button type="button" class="btn btn-secondary btn-block" id="next-button">
+        <a href="#" style="text-decoration: none; color: black;">Next Project</a>
+      </button>
     </div>
   </div>
   
 </div>
+
+<script>
+// Load project info from JSON file
+fetch('info.json')
+  .then(response => response.json())
+  .then(data => {
+    // Check if data is an array and access the first item
+    const projectInfo = Array.isArray(data) ? data[0] : data;
+    console.log(projectInfo);
+    // Update project name and description
+    document.getElementById('project-name').innerText = projectInfo.name;
+    console.log(data.name);
+    document.getElementById('project-description').innerText = projectInfo.description;
+
+    // Update navigation buttons with links from info.json
+    document.getElementById('prev-button').querySelector('a').href = projectInfo.prev;
+    document.getElementById('next-button').querySelector('a').href = projectInfo.next;
+
+    // Load image list from pictures.json for the carousel
+    return fetch('pictures.json');
+  })
+  .then(response => response.json())
+  .then(data => {
+    const carouselInner = document.getElementById('carousel-items');
+    const images = data.images;
+
+    images.forEach((image, index) => {
+      const activeClass = index === 0 ? 'active' : '';  // First image should be active
+      const carouselItem = `
+        <div class="carousel-item ${activeClass}">
+          <img src="${image}" class="d-block w-100" alt="Project image">
+        </div>
+      `;
+      carouselInner.innerHTML += carouselItem;
+    });
+  })
+  .catch(error => console.error('Error loading data:', error));
+</script>
 
 </body>
 </html>
